--- a/jenkins/casc_configs/docker-cloud.yml
+++ b/jenkins/casc_configs/docker-cloud.yml
@@ -13,7 +13,7 @@ jenkins:
                 jnlpLauncher:
                   vmargs: -Xmx1g
             dockerTemplateBase:
-              image: jenkins/slave
+              image: jenkins/jnlp-slave
             remoteFs: /home/jenkins
             instanceCapStr: 10
             labelString: generic
